Removing link color/underline for contact us

--- a/sass/global.pages.scss
+++ b/sass/global.pages.scss
@@ -356,6 +356,10 @@ div.messages,
         margin-top: 5px;
       }
     }
+    h3 a{
+      color: inherit;
+      text-decoration: none;
+    }
     p {
       padding-left: .5em;
     }
