--- a/css/fo.css
+++ b/css/fo.css
@@ -47,3 +47,25 @@
 .site-name-grant-accounting-office #branding {
   width: inherit;
 }
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/fo\.scss}line{font-family:\0000354}}
+.pane-front-page-featured-content {
+  background-color: #D9EDF7;
+  border: 1px solid #bce8f1;
+  border-radius: 4px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/fo\.scss}line{font-family:\0000358}}
+.pane-front-page-featured-content h1 {
+  font-size: 1.2em;
+  line-height: 1.2em;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/fo\.scss}line{font-family:\0000362}}
+.pane-front-page-featured-content .block-title {
+  text-transform: uppercase;
+  font-size: 1.4em;
+  padding: 10px 0;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/fo\.scss}line{font-family:\0000367}}
+.pane-front-page-featured-content .node {
+  margin-bottom: 0;
+}
