--- a/sass/fo.scss
+++ b/sass/fo.scss
@@ -48,3 +48,23 @@
 .site-name-grant-accounting-office #branding {
 	width: inherit;
 }
+
+// Featured Page on GAO
+
+.pane-front-page-featured-content{
+	background-color: #D9EDF7;
+	border: 1px solid #BCE8F1;
+	border-radius: 4px;
+	h1{
+		font-size: 1.2em;
+		line-height: 1.2em;
+	}
+	.block-title{
+		text-transform: uppercase;
+		font-size: 1.4em;
+		padding: 10px 0;
+	}
+	.node {
+	margin-bottom:0;
+	}
+}
