--- a/sass/fo.scss
+++ b/sass/fo.scss
@@ -49,6 +49,12 @@
 	width: inherit;
 }
 
+//Hide Book Nav on GAO
+
+.site-name-grant-accounting-office .book-navigation{
+	display:none;
+}
+
 // Featured Page on GAO
 
 .pane-front-page-featured-content{
