--- a/sass/fo.scss
+++ b/sass/fo.scss
@@ -9,6 +9,10 @@
 	color: #150517; 
 }
 
+#breadcrumb-wrapper .container {
+	min-height: 18px;
+}
+
 #footer-panels-wrapper{
 	.region.region-three-33-first{
 		width: 66.6666%;
@@ -24,6 +28,21 @@
 	border-bottom: 1px solid rgb(255, 195, 68);
 	padding: 10px;
 	position: relative;
+	&:after {
+      content: ' ';
+      background: #FFC344;
+      height: 6px;
+      width: 6px;
+      position: absolute;
+      bottom: -3px;
+      right: 0;
+    }
+}
+
+.panel-pane h2 {
+border-bottom: 1px solid rgb(255, 195, 68);
+		position: relative;
+		margin-bottom: 16px;
 	&:after {
       content: ' ';
       background: #FFC344;
