--- a/sass/fo.scss
+++ b/sass/fo.scss
@@ -69,6 +69,9 @@ border-bottom: 1px solid rgb(255, 195, 68);
 		margin-bottom: 30px;
 		float: left;
 	}
+	.views-field-nothing{
+		font-weight: bold;
+	}
 }
 
 // Department & Unit List
