--- a/sass/global.tables.scss
+++ b/sass/global.tables.scss
@@ -70,7 +70,8 @@ tbody {}
 
 tr {
 
-  &.even {
+  &.odd,
+  &:nth-child(2n+2) {
     border-bottom: 0;
     background-color: #fff;
   }
@@ -79,8 +80,7 @@ tr {
   &.odd,
   &:nth-child(2n+1)  {
     border-bottom: 0;
-    background-color: #f5f5f5;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: #F9F9F9;
   }
 
   &.drag {}
