Changing margin for staff directory

--- a/sass/fo.scss
+++ b/sass/fo.scss
@@ -56,9 +56,11 @@ border-bottom: 1px solid rgb(255, 195, 68);
     }
 }
 
+// Staff Directory View on FO
+
 .view-staff-directory{
 	.views-row{
-		margin-bottom: 30px;
+		margin-top: 30px;
 		clear: left;
 	}
 	.views-field{
@@ -74,7 +76,7 @@ border-bottom: 1px solid rgb(255, 195, 68);
 	}
 }
 
-// Department & Unit List
+// Department & Unit List on FO
 
 .view-id-departments_units{
 	h3{
