--- a/css/global.tables.css
+++ b/css/global.tables.css
@@ -61,14 +61,14 @@ th {
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.tables\.scss}line{font-family:\0000374}}
-tr.odd, tr:nth-child(2n+2) {
+tr.even, tr:nth-child(2n+2) {
   border-bottom: 0;
   background-color: #fff;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.tables\.scss}line{font-family:\0000381}}
 tr.info, tr.odd, tr:nth-child(2n+1) {
   border-bottom: 0;
-  background-color: #F9F9F9;
+  background-color: #E5E5E5;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/mahrens\/Documents\/Sitenow\/sites\/all\/themes\/fo_common\/sass\/global\.tables\.scss}line{font-family:\0000390}}
 tr.odd td.active {
