--- a/sass/global.tables.scss
+++ b/sass/global.tables.scss
@@ -70,7 +70,7 @@ tbody {}
 
 tr {
 
-  &.odd,
+  &.even,
   &:nth-child(2n+2) {
     border-bottom: 0;
     background-color: #fff;
@@ -80,7 +80,7 @@ tr {
   &.odd,
   &:nth-child(2n+1)  {
     border-bottom: 0;
-    background-color: #F9F9F9;
+    background-color: #E5E5E5;
   }
 
   &.drag {}
